# ans_vm

./: CMakeCache.txt  CMakeLists.txt  Makefile  a.tmp  ab.txt  assembler  cmake_install.cmake  ex.txt  inst  multi  multi_thread_ex.cpp  text_anim  virtual_display  vm_test
include/: instruction.h  virtual_display.h  vm copy.h  vm.h
src/: assembler  assembler.cpp  compiler.cpp  gtest_vm.cpp  main.cpp  text_anim.cpp  vm copy.cpp  vm.cpp  vm_display_test.cpp  vm_old.cpp  vm_test.cpp
tests/: test_instr.cpp  test_vm.cpp
